# LEXOR-Interpreter

./: .gitignore  README.md
Interpreter Building Tutorial/: 00_FILE_MANIFEST.md  01_ARCHITECTURE_GUIDE.md  02_LEXER_TUTORIAL.md  03_PARSER_TUTORIAL.md  04_INTERPRETER_TUTORIAL.md  05_COMPLETE_EXAMPLES.md  06_BUILD_GUIDE.md  07_ENHANCEMENT_GUIDE.md  08_QUICK_REFERENCE.md  09_TROUBLESHOOTING_GUIDE.md  10_INDEX.md  CMakeLists.txt  CMakeLists2.txt  IMPLEMENTATION_SUMMARY.md  INCREMENT1_LINE_BY_LINE_PLAN.md  README.md
Interpreter Building Tutorial/examples/: arithmetic.lexor  lexorSample  loop.lexor
Lexor-Interpreter/: CMakeLists.txt  ast.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  sample.lexor  test.txt  token.h  token.hpp  value.hpp
Lexor-Interpreter/Test/: arithmetic.lexor  hello.lexor  if_else.lexor  if_elseif.lexor  if_nested.lexor  if_simple.lexor  logical.lexor  loop.lexor  sample.lexor  spec_sample.lexor  test.lexor  test_assign.lexor  test_assign_float_to_int.lexor  test_decl_float_in_int.lexor  test_float_frac.lexor  test_float_whole.lexor  test_redeclare.lexor  test_unary_float.lexor  test_unary_minus.lexor  test_unary_not.lexor  test_unary_plus.lexor
